--- a/public/template/admin/index.html
+++ b/public/template/admin/index.html
@@ -49,7 +49,8 @@
                 // {id:'code',text:'首页代码',href:'__MAIN__/code.html',closeable : false},
                 {id:'main-menu',text:'导航设置',href:'__MAIN__/menu.html'},
                 {id:'second-menu',text:'右边菜单',href:'__MAIN__/second-menu.html'},
-                {id:'dyna-menu',text:'动态菜单',href:'__MAIN__/dyna-menu.html'}
+                {id:'dyna-menu',text:'动态菜单',href:'__MAIN__/dyna-menu.html'},
+                {id:'nav—set',text:'导航设置',href:'__NAV__/index.html'},
               ]
             },{
               text:'页面操作',
