--- a/public/template/admin/main/menu_list.html
+++ b/public/template/admin/main/menu_list.html
@@ -20,130 +20,17 @@
 
 <div class="container">
     <div id="grid"></div>
-    <p>
-        <button id="btnSave" class="button button-primary">提交</button>
-    </p>
-    <h2>提交结果</h2>
-    <div class="row">
-        <div id="log" class="well span12">
+    <!--<p>-->
+        <!--<button id="btnSave" class="button button-primary">提交</button>-->
+    <!--</p>-->
+    <!--<h2>提交结果</h2>-->
+    <!--<div class="row">-->
+        <!--<div id="log" class="well span12">-->
 
-        </div>
-    </div>
+        <!--</div>-->
+    <!--</div>-->
 
-    <div class="row">
-        <div class="span8">
-            <h2>简介</h2>
-            <p>表格跟弹出框联动，有一下需要处理的点：</p>
-            <ol>
-                <li>表单：用于添加删除记录</li>
-                <li>添加操作</li>
-                <li>编辑操作</li>
-                <li>删除操作</li>
-            </ol>
-        </div>
-        <div class="span16">
-            <h3>表格弹出框插件</h3>
-            <p>弹出框跟表格的联动，是作为一个插件的形式提供给开发使用的<code>BUI.Grid.Plugins.DialogEditing</code></p>
-            <p>配置项：</p>
-            <ol>
-                <li><code>contentId</code>: 弹出框显示的内容的id，里面包含一个表单</li>
-                <li><code>triggerCls</code>：点击表格行时触发编辑的 css</li>
-            </ol>
-            <p>在使用插件过程中有以下常用属性：</p>
-            <ol>
-                <li><code>form</code> : 弹出框包含的表单控件</li>
-                <li><code>editor</code> : 编辑器控件</li>
-                <li><code>record</code> : 当前编辑的记录</li>
-            </ol>
-            <p>还提供一个事件</p>
-            <ol>
-                <li><code>recordchange</code> : 当编辑的对象发生改变时触发</li>
-            </ol>
-            <h3>列定义</h3>
-            <p>列定义中不需要定义编辑器</p>
-            <pre class="prettyprint linenums">
- var columns = [{title : '学校名称',dataIndex :'name'},
-  {title : '入学日期',dataIndex :'enter'},
-  {title : '毕业日期',dataIndex :'outter'},
-  {title : '备注',dataIndex :'memo',width:200},
-  {title : '操作',renderer : function(){   alert(123);
-    return '<span class="grid-command btn-edit">编辑</span>';//生成编辑操作
-  }}
-];
-        </pre>
-            <h3>插件初始化</h3>
-            <pre class="prettyprint linenums">
-var editing = new Grid.Plugins.DialogEditing({
-        contentId : 'content',//弹出框显示的内容的id
-        triggerCls : 'btn-edit' //点击表格行时触发编辑的 css
-      });       
-        </pre>
-            <h3>表格初始化</h3>
-            <pre class="prettyprint linenums">
-var grid = new Grid.Grid({
-    render : '#grid',
-    columns : columns,
-    width : 700,
-    forceFit : true,
-    store : store,
-    plugins : [Grid.Plugins.CheckSelection,editing],
-    tbar:{
-      items : [{
-        btnCls : 'button button-small',
-        text : '&lt;i class="icon-plus"&gt;&lt;/i&gt;添加',
-        listeners : {
-          'click' : addFunction
-        }
-      },
-      {
-        btnCls : 'button button-small',
-        text : '&lt;i class="icon-remove"&gt;&lt;/i&gt;删除',
-        listeners : {
-          'click' : delFunction
-        }
-      }]
-    }
 
-  });
-grid.render();
-        </pre>
-        </div>
-    </div>
-    <div class="row">
-        <div class="span8">
-            <h2>其他操作</h2>
-            <p>表格提交时不需要验证。</p>
-            <ol>
-                <li>添加和删除操作需要自定义函数，在上面的按钮栏上注册了<code>addFunction</code>和<code>delFunction</code>事件处理函数</li>
-                <li>提交表格数据，可以异步提交表格，或者将表格数据保存到表单的隐藏域中，进行提交。 </li>
-                <li>点击行上的编辑操作时，弹出Dialog进行编辑。</li>
-            </ol>
-        </div>
-        <div class="span16">
-            <h3>添加操作</h3>
-            <pre class="prettyprint linenums">
-function addFunction(){
-  var newData = {school :'请输入学校名称'};
-  editing.add(newData); //直接弹出框编辑
-}
-        </pre>
-            <h3>删除操作</h3>
-            <pre class="prettyprint linenums">
-function delFunction(){
-  var selections = grid.getSelection();
-  store.remove(selections);
-}
-        </pre>
-            <h3>提交前保存数据</h3>
-            <pre class="prettyprint linenums">
-var logEl = $('#log'); //可以放到隐藏域中
-$('#btnSave').on('click',function(){//监听form的提交事件
-  var records = store.getResult();
-  logEl.text(BUI.JSON.stringify(records));
-});
-        </pre>
-        </div>
-    </div>
     <div id="content" class="hide">
         <form id="J_Form" class="form-horizontal">
             <div class="row">
@@ -171,6 +58,7 @@ $('#btnSave').on('click',function(){//监听form的提交事件
                     <div id="range" class="controls bui-form-group" data-rules="{dateRange : true}">
                         <input name="url" type="text" data-rules="{required:true}" class="input-normal control-text">
                     </div>
+                    <input type="hidden" name="id" value="0">
                 </div>
             </div>
             <div class="row">
@@ -202,6 +90,7 @@ $('#btnSave').on('click',function(){//监听form的提交事件
     });
 </script>
 <script type="text/javascript">
+    var dataId = window.dataId;//设置全局
 
     var coordinates = (function() {
         var result;
@@ -225,10 +114,6 @@ $('#btnSave').on('click',function(){//监听form的提交事件
 
     $('#menu_first').html(option);
 
-    var buttonText = $('.button-text');
-    buttonText.on('click',function(){
-        alert(111);;
-    });
 
 
     BUI.use(['bui/grid','bui/data'],function (Grid,Data) {
@@ -236,14 +121,23 @@ $('#btnSave').on('click',function(){//监听form的提交事件
 
 
         var columns = [{title : '标题',dataIndex :'name'},
+
+                {title : 'id',dataIndex :'id',display:'none',width:0,
+                    renderer : function(k,v){
+                        if(!v.id ){
+                            console.log(k);console.log(v);
+                         }
+                        return '<span style="color: #9d261d;">' + v.id + '</span>';
+                    }
+                },
+
                 {title : 'url地址',dataIndex :'url'},
                 {title : '是否显示',dataIndex :'ifshow',renderer : function(k,v){
-                    if(v.ifshow){
-                        text = '<span style="color:#333">隐藏</span>'
+                    if(v.ifshow==0){
+                        text = '<span style="color:#333">显示</span>'
                     }else{
-                        text = '<span style="color: #9d261d">显示</span>'
+                        text = '<span style="color: #9d261d">隐藏</span>'
                     }
-
                         return text;
                     }
                 },
@@ -271,7 +165,8 @@ $('#btnSave').on('click',function(){//监听form的提交事件
             //     {id:'2',school:'武汉第一高级中学',enter:'2002-09-01',type: 'zou',outter:'2005-07-01',memo:'表现优异，多次评为三好学生'}
             // ],
             store = new Data.Store({
-                data:data
+                data:data,
+                pageSize:10,	// 配置分页数目
             }),
             editing = new Grid.Plugins.DialogEditing({
                 contentId : 'content',
@@ -282,29 +177,37 @@ $('#btnSave').on('click',function(){//监听form的提交事件
                     var edtor = this,
                         form = edtor.get('form'),
                         editType = editing.get('editType'),//add 或者 edit
-                        url = '/admin/nav';
-                    /*if(editType == 'add'){ //可以根据编辑类型决定url
-                      url = 'xxx';
-                    }else{
-                      url = 'xxxxx';
-                    }*/
-                    url += '?saveType=' + editType;
+                        url = '';
+                        if(editType == 'add'){ //可以根据编辑类型决定url
+                          url = '/admin/nav';
+                        }else{
+                          url = '/admin/nav/edit';
+                        }
+                        url += '?saveType=' + editType;
                     //检验
                     form.valid();
                     if(form.isValid()){
                         form.ajaxSubmit({ //表单异步提交
                             url : url,
-                            data:{name:$("input[name='name']").val(),url:$("input[name='url']").val(),ifshow:$("input[name='ifshow']").val(),cid:$("input[name='cid']").val()},
+                            data:{id:$("input[name='id']").val(),name:$("input[name='name']").val(),url:$("input[name='url']").val(),ifshow:$("input[name='ifshow']").val(),cid:$("input[name='cid']").val()},
                             type:'post',
                             success : function(data){
-
-                                alert(editType);
-                                console.log(data);
+                                // console.log(data);
                                 if(editType == 'add'){
                                     //do something
                                 }else{
                                     //do other
                                 }
+
+                                if(data.status){
+                                    show(data.info);
+                                    return false;
+                                }else{
+                                    if(editType == 'add') {
+                                      $('input[name=id]').val(data.id);
+                                    }
+                                }
+
                                 //将a 改成 1 测试一下显示错误
                                 if(data.hasError){ //返回的数据是 {hasError : fasle,error : 'xxxx',field : 'xxx'},也可以是任意格式的数据如 ： {success : false,'error' : 'xxxxx'}
                                     var field = data.field;
@@ -344,6 +247,11 @@ $('#btnSave').on('click',function(){//监听form的提交事件
                                 'click' : delFunction
                             }
                         }]
+                },
+                // 底部工具栏
+                bbar:{
+                    // pagingBar:表明包含分页栏
+                    pagingBar:true
                 }
 
             });
@@ -356,6 +264,31 @@ $('#btnSave').on('click',function(){//监听form的提交事件
 
         function delFunction(){
             var selections = grid.getSelection();
+
+
+            var idArr = (function() {
+                var idArr  = new Array();
+
+
+                for (var i=0;i<selections.length;i++) {
+                    idArr[i] = selections[i]['id'];
+                }
+                return idArr;
+            })();
+            console.log(idArr);
+            $.ajax({
+                type: 'POST',
+                url: '/admin/nav/del',
+                data: {
+                    id: idArr,
+                },
+                success: function (data) {
+                    if(data.status) {
+                        show(data.info);
+                        return false;
+                    }
+                }
+            });
             store.remove(selections);
         }
         var logEl = $('#log');
@@ -365,14 +298,13 @@ $('#btnSave').on('click',function(){//监听form的提交事件
             logEl.text(BUI.JSON.stringify(records));
         });
 
-        var buttonText = $('.button-text');
-        buttonText.on('click',function(){
-            //var selections = grid.getSelection();
-            //console.log(selections);
-            alert(2323);
-           // var records = store.getResult();
-           // logEl.text(BUI.JSON.stringify(records));
-        });
+
+        function show (meg) {
+            BUI.Message.Alert(meg,function(){
+                //alert('确认');
+            },'info');
+        }
+
 
     });
 </script>
