--- a/public/template/admin/main/admin_add.html
+++ b/public/template/admin/main/admin_add.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>表单按纽</title>
     <!-- 此文件为了显示Demo样式，项目中不需要引入 -->
-    <link href="../../assets/code/demo.css" rel="stylesheet">
+    <link href="../assets/code/demo.css" rel="stylesheet">
 
     <link href="http://g.alicdn.com/bui/bui/1.1.21/css/bs3/dpl.css" rel="stylesheet">
     <link href="http://g.alicdn.com/bui/bui/1.1.21/css/bs3/bui.css" rel="stylesheet">
@@ -20,7 +20,7 @@
                     <div class="control-group span8">
                         <label class="control-label">用户名：</label>
                         <div class="controls">
-                            <input type="text" class="control-text">
+                            <input type="text" name='user' class="control-text">
                         </div>
                     </div>
 
@@ -29,14 +29,14 @@
                     <div class="control-group span8">
                         <label class="control-label">密&nbsp;&nbsp;&nbsp;&nbsp;码：</label>
                         <div class="controls">
-                            <input type="text" class="control-text">
+                            <input type="password" name='passwd' class="control-text">
                         </div>
                     </div>
 
                 </div>
                 <div class="row">
                     <div class="form-actions offset3">
-                        <button type="submit" class="button button-primary">保存</button>
+                        <button type="submit" class="button button-primary" onclick="return returnSubmit()">保存</button>
                         <button type="reset" class="button">重置</button>
                     </div>
                 </div>
@@ -44,7 +44,47 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="../assets/js/jquery-1.8.1.min.js"></script>
+    <script type="text/javascript" src="../assets/js/bui-min.js"></script>
+
+    <script type="text/javascript" src="../assets/js/config-min.js"></script>
     <!-- script end -->
+    <script>
+
+        function returnSubmit(){
+
+            $.ajax({
+                type:'POST',
+                url:'/admin/reg',
+                data:{user:$("input[name='user']").val(),passwd:$("input[name='passwd']").val()},
+                dataType:'json',
+                async:false,
+                success:function(data){
+
+                    if(data.status){
+                        show(data.info);
+                    }else{
+                        show(data.info);
+                        setTimeout('myrefresh()',3000); //指定1秒刷新一次
+                    }
+                   // result = data;
+                }
+            });
+            //alert(22);
+            //coordinates;
+            return false;
+        }
+
+        function myrefresh() {
+            window.location.reload();
+        }
+
+        function show (meg) {
+            BUI.Message.Alert(meg,function(){
+                //alert('确认');
+            },'info');
+        }
+    </script>
 </div>
 </body>
 </html>
