--- a/public/template/admin/main/test.html
+++ b/public/template/admin/main/test.html
@@ -1,1 +1,10 @@
-这是一个测试页面
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    没有权限
+</body>
+</html>
