--- a/public/template/admin/index.html
+++ b/public/template/admin/index.html
@@ -47,8 +47,8 @@
       <div class="dl-inform"><div class="dl-inform-title">贴心小秘书<s class="dl-inform-icon dl-up"></s></div></div>
       <ul id="J_Nav"  class="nav-list ks-clear">
         <li class="nav-item dl-selected"><div class="nav-item-inner nav-home">首页</div></li>
-        <li class="nav-item"><div class="nav-item-inner nav-supplier">详情页</div></li>
-        <li class="nav-item"><div class="nav-item-inner nav-order">表单页</div></li>
+        <!--<li class="nav-item"><div class="nav-item-inner nav-supplier">详情页</div></li>-->
+        <!--<li class="nav-item"><div class="nav-item-inner nav-order">表单页</div></li>-->
       </ul>
     </div>
     <ul id="J_NavContent" class="dl-tab-conten">
@@ -95,13 +95,15 @@
                 {id:'operation',text:'添加用户',href:'__MAIN__/admin_add.html'},
                 {id:'quick',text:'用户列表',href:'/admin/list'}
               ]
-            },{
+            }
+           /* ,{
               text:'文件结构',
               items:[
                 {id:'resource',text:'资源文件结构',href:'__MAIN__/resource.html'},
                 {id:'loader',text:'引入JS方式',href:'__MAIN__/loader.html'}
               ]
-            }]
+            }*/
+            ]
           },{
             id:'detail',
             menu:[{
