--- a/public/template/admin/main/second-menu.html
+++ b/public/template/admin/main/second-menu.html
@@ -232,6 +232,7 @@
                   columns : [
                       {title:'标题',dataIndex:'title',width:80},
                       {title:'上级菜单',dataIndex:'cat_id',width:100},
+                      {title:'内容',dataIndex:'content',width:100},
                       {title:'添加时间',dataIndex:'add_time',width:100,renderer:Grid.Format.datetimeRenderer,renderer : function(k,v){
                               return formatDateTime(v.add_time);
                           }
